Sync chrishubert/whatsapp-api - pull requests
