# src/controllers/messageController.js
@@ -1,5 +1,6 @@
+const { MessageMedia, Location, Poll } = require('whatsapp-web.js');
 const { sessions } = require('../sessions');
-const { sendErrorResponse } = require('../utils');
+const { sendErrorResponse, toContactId } = require('../utils');
 
 /**
  * Get message by its ID from a given chat using the provided client.
@@ -312,6 +313,7 @@ const react = async (req, res) => {
  * @param {string} req.body.messageId - The ID of the message to reply to.
  * @param {string} req.body.chatId - The ID of the chat the message is in.
  * @param {string} req.body.content - The content of the message to send.
+ * @param {string} [req.body.contentType='string'] - Content type: string, MessageMedia, MessageMediaFromURL, Location, Contact, or Poll.
  * @param {string} req.body.destinationChatId - The ID of the chat to send the reply to.
  * @param {Object} req.body.options - Additional options for sending the message.
  * @returns {Object} The HTTP response containing the result of the operation.
@@ -320,13 +322,94 @@ const react = async (req, res) => {
 const reply = async (req, res) => {
   try {
     const { messageId, chatId, content, destinationChatId, options } = req.body;
+    const contentType = req.body.contentType || 'string';
     const client = sessions.get(req.params.sessionId);
     const message = await _getMessageById(client, messageId, chatId);
     if (!message) {
       throw new Error('Message not Found');
     }
-    const repliedMessage = await message.reply(content, destinationChatId, options);
-    res.json({ success: true, repliedMessage });
+
+    let messageOut;
+    switch (contentType) {
+      case 'string':
+        if (options?.media) {
+          const media = options.media;
+          media.filename = media.filename || null;
+          media.filesize = media.filesize || null;
+          options.media = new MessageMedia(media.mimetype, media.data, media.filename, media.filesize);
+        }
+        messageOut = await message.reply(content, destinationChatId, options);
+        break;
+      case 'MessageMediaFromURL': {
+        const messageMediaFromURL = await MessageMedia.fromUrl(content, { unsafeMime: true });
+        if (options?.filename) {
+          messageMediaFromURL.filename = options.filename;
+        }
+        messageOut = await message.reply(messageMediaFromURL, destinationChatId, options);
+        break;
+      }
+      case 'MessageMedia': {
+        const messageMedia = new MessageMedia(content.mimetype, content.data, content.filename, content.filesize);
+        messageOut = await message.reply(messageMedia, destinationChatId, options);
+        break;
+      }
+      case 'Location': {
+        const location = new Location(content.latitude, content.longitude, {
+          name: content.name || content.description,
+          address: content.address,
+          url: content.url,
+        });
+        messageOut = await message.reply(location, destinationChatId, options);
+        break;
+      }
+      case 'Contact': {
+        const contactId = toContactId(content.contactId);
+        if (!contactId) {
+          return sendErrorResponse(res, 422, 'contactId is required');
+        }
+        const contact = await client.getContactById(contactId);
+        messageOut = await message.reply(contact, destinationChatId, options);
+        break;
+      }
+      case 'Poll': {
+        const poll = new Poll(content.pollName, content.pollOptions, content.options);
+        messageOut = await message.reply(poll, destinationChatId, options);
+        break;
+      }
+      default:
+        return sendErrorResponse(res, 404, 'contentType invalid, must be string, MessageMedia, MessageMediaFromURL, Location, Contact or Poll');
+    }
+
+    res.json({ success: true, repliedMessage: messageOut });
+  } catch (error) {
+    sendErrorResponse(res, 500, error.message);
+  }
+};
+
+/**
+ * Edit a specific message in a chat
+ *
+ * @async
+ * @function edit
+ * @param {Object} req - The HTTP request object.
+ * @param {Object} res - The HTTP response object.
+ * @param {string} req.params.sessionId - The session ID.
+ * @param {string} req.body.messageId - The message ID to edit.
+ * @param {string} req.body.chatId - The chat ID.
+ * @param {string} req.body.content - The new message content.
+ * @param {Object} [req.body.options] - Additional edit options.
+ * @returns {Promise<void>}
+ */
+const edit = async (req, res) => {
+  try {
+    const { messageId, chatId, content, options } = req.body;
+    const client = sessions.get(req.params.sessionId);
+    const message = await _getMessageById(client, messageId, chatId);
+    if (!message) {
+      throw new Error('Message not Found');
+    }
+    const editedMessage = await message.edit(content, options);
+    res.json({ success: true, editedMessage });
   } catch (error) {
     sendErrorResponse(res, 500, error.message);
   }
@@ -398,6 +481,7 @@ module.exports = {
   getQuotedMessage,
   react,
   reply,
+  edit,
   star,
   unstar,
 };
